# expandr

./: .gitignore  Cargo.toml  LICENSE  README.md  exr.vim
crates/driver/: Cargo.toml
crates/driver/src/: general_error.rs  lib.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: diagnostics.rs  lib.rs  main.rs  server.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: context.rs  expand.rs  expansion_error.rs  lib.rs  mapping_lookup.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast_into_owned.rs  lib.rs  parser.rs  (+2 more)
examples/: arithmetic.exr  asm.exr  blocks.exr  blog.exr  example.exr  html.exr  modules1.exr  modules2.ast  modules2.ctx  modules2.exr  recursion.ast  recursion.ctx  recursion.exr  repetition.exr  sugar_idents.exr  symbols.exr
examples/mlir/: makefile  minimal.exr  printf_ffi.exr  printf_ffi.mlir  stdlib.exr
examples/py/: py.exr  simple_enums.exr
src/: ast.rs  context.rs  errs.rs  expand.rs  grammar.pest  lexer.rs  lib.rs  main.rs  parser.rs  source_type.rs  tests.rs
src/ast/: ast.rs  ast_into_owned.rs  expr.rs  import.rs  is.rs  is_expr.rs  mapping.rs  mapping_application.rs  mapping_param.rs  mod.rs  path_ident.rs  template_string.rs
src/builtins/: mod.rs
src/cli/: mod.rs
src/errors/: expansion_error.rs  general_error.rs  lexer_error.rs  logging.rs  mod.rs  parse_error.rs  pretty_print.rs
src/grammar/: mod.rs
src/lexer/: expr_token.rs  mod.rs  raw_token.rs
tests/: arithmetic.exr  asm.exr  blog.exr  html.exr  symbols.exr  symbols.out
tests/expected/: arithmetic.out  asm.out  blog.out
tests/output/: arithmetic.out  html.out
(+40 files in other folders)
