[package]
name = "expandr-lsp"
description = "LSP for the expandr language"
version.workspace = true
edition.workspace = true

[dependencies]
expandr-syntax = { path = "../syntax" }
expandr-semantic = { path = "../semantic" }
tower-lsp = "0.20.0"
tokio = { version = "1", features = ["full"] }
strip-ansi-escapes = "0.2.1"

